<resources>
    <string name="app_name">Taxikini</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Ride</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="nav_ride">Book your ride</string>
    <string name="nav_find_job">Find Job</string>
    <string name="nav_airport_taxi">Airport Taxi</string>
    <string name="nav_history">History</string>
    <string name="nav_payments">Payments</string>
    <string name="nav_support">Support</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_passenger">Switch As Passenger</string>
    <string name="nav_driver">Switch As Driver</string>
    <string name="nav_logout"> Log out </string>


    <string name="nav_news">News Feed</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_enter_a_message">Type a message…</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="terms">terms &amp; conditions</string>

    <!-- for all -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAlwVsZwxcZiZhg4Zf1kJLDJmZodI194wc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="sendPhoto">Photo Camera</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_picture_title">Get Photo From</string>
    <string name="sendPhotoGallery">Photo Gallery</string>
    <string name="sendLocation">Send Location</string>
</resources>
